Modify styles and and js script

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<body>
         <div class="container">
             <div class="calculator">
-                <div class="screen"></div>
-                <div class="buttons">
+                <div id="screen" class="screen"></div>
+                <div id="buttons"class="buttons">
                     <div class="clear">AC</div>
-                    <div class="symbol">( )</div>
+                    <div class="brackets">( )</div>
                     <div class="symbol">%</div>
                     <div class="symbol">/</div>
                     <div class="number">7</div>
@@ -28,12 +28,14 @@
                     <div class="number">2</div>
                     <div class="number">3</div>
                     <div class="symbol">-</div>
-                    <div class="number">.</div>
+                    <div class="dot">.</div>
                     <div class="number">0</div>
-                    <div class="number">del</div>
+                    <div class="del">del</div>
                     <div class="result">=</div>
                 </div>
             </div>
         </div>
+
+        <script src="/js/app.js"></script>
     </body>
 </html>
