--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 	<body>
         <div class="container">
             <div class="calculator">
-                <div id="screen" class="screen"></div>
+                <div class="screen">
+                    <div id="screen"></div>
+                </div>
                 <div id="buttons"class="buttons">
                     <div class="clear">AC</div>
                     <div class="brackets">( )</div>
-                    <div class="symbol">%</div>
-                    <div class="symbol">/</div>
-                    <div class="number">7</div>
-                    <div class="number">8</div>
-                    <div class="number">9</div>
-                    <div class="symbol">*</div>
-                    <div class="number">4</div>
-                    <div class="number">5</div>
-                    <div class="number">6</div>
-                    <div class="symbol">+</div>
-                    <div class="number">1</div>
-                    <div class="number">2</div>
-                    <div class="number">3</div>
-                    <div class="symbol">-</div>
-                    <div class="dot">.</div>
-                    <div class="number">0</div>
+                    <div class="button symbol">%</div>
+                    <div class="button symbol">/</div>
+                    <div class="button number">7</div>
+                    <div class="button number">8</div>
+                    <div class="button number">9</div>
+                    <div class="button symbol">*</div>
+                    <div class="button number">4</div>
+                    <div class="button number">5</div>
+                    <div class="button number">6</div>
+                    <div class="button symbol">+</div>
+                    <div class="button number">1</div>
+                    <div class="button number">2</div>
+                    <div class="button number">3</div>
+                    <div class="button symbol">-</div>
+                    <div class="button dot">.</div>
+                    <div class="button number">0</div>
                     <div class="del">del</div>
                     <div class="result">=</div>
                 </div>
