--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
                     <div id="screen"></div>
                 </div>
                 <div id="buttons"class="buttons">
-                    <div class="clear">AC</div>
-                    <div class="brackets">( )</div>
-                    <div class="button symbol">%</div>
-                    <div class="button symbol">/</div>
-                    <div class="button number">7</div>
-                    <div class="button number">8</div>
-                    <div class="button number">9</div>
-                    <div class="button symbol">*</div>
-                    <div class="button number">4</div>
-                    <div class="button number">5</div>
-                    <div class="button number">6</div>
-                    <div class="button symbol">+</div>
-                    <div class="button number">1</div>
-                    <div class="button number">2</div>
-                    <div class="button number">3</div>
-                    <div class="button symbol">-</div>
-                    <div class="button dot">.</div>
-                    <div class="button number">0</div>
-                    <div class="del">del</div>
-                    <div class="result">=</div>
+                    <button class="clear">AC</button>
+                    <button class="brackets">( )</button>
+                    <button class="button symbol">%</button>
+                    <button class="button symbol">/</button>
+                    <button class="button number">7</button>
+                    <button class="button number">8</button>
+                    <button class="button number">9</button>
+                    <button class="button symbol">*</button>
+                    <button class="button number">4</button>
+                    <button class="button number">5</button>
+                    <button class="button number">6</button>
+                    <button class="button symbol">+</button>
+                    <button class="button number">1</button>
+                    <button class="button number">2</button>
+                    <button class="button number">3</button>
+                    <button class="button symbol">-</button>
+                    <button class="button dot">.</button>
+                    <button class="button number">0</button>
+                    <button class="del">del</button>
+                    <button class="result">=</button>
                 </div>
             </div>
         </div>
