Add percent function

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="buttons"class="buttons">
                     <button class="clear">AC</button>
                     <button class="brackets">( )</button>
-                    <button class="button symbol">%</button>
+                    <button class="percent">%</button>
                     <button class="button symbol">/</button>
                     <button class="button number">7</button>
                     <button class="button number">8</button>
